; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_is_empty_dir.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_is_empty_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dirent = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_empty_dir(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.dirent*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32* @opendir(i8* %7)
  store i32* %8, i32** %4, align 8
  store i32 1, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %29

12:                                               ; preds = %1
  br label %13

13:                                               ; preds = %24, %12
  %14 = load i32*, i32** %4, align 8
  %15 = call %struct.dirent* @readdir(i32* %14)
  store %struct.dirent* %15, %struct.dirent** %5, align 8
  %16 = icmp ne %struct.dirent* %15, null
  br i1 %16, label %17, label %25

17:                                               ; preds = %13
  %18 = load %struct.dirent*, %struct.dirent** %5, align 8
  %19 = getelementptr inbounds %struct.dirent, %struct.dirent* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @is_dot_or_dotdot(i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %17
  store i32 0, i32* %6, align 4
  br label %25

24:                                               ; preds = %17
  br label %13

25:                                               ; preds = %23, %13
  %26 = load i32*, i32** %4, align 8
  %27 = call i32 @closedir(i32* %26)
  %28 = load i32, i32* %6, align 4
  store i32 %28, i32* %2, align 4
  br label %29

29:                                               ; preds = %25, %11
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32* @opendir(i8*) #1

declare dso_local %struct.dirent* @readdir(i32*) #1

declare dso_local i32 @is_dot_or_dotdot(i32) #1

declare dso_local i32 @closedir(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
